# kontratazioa-ETL

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
data/samples/: README.md
data/samples/bidder/: README.md  raw_json_A27178789.json
meta/: README.md  std_cpv-2008_supplementary.csv  std_kontratazioa_categories.csv  std_kontratazioa_countries.csv  std_kontratazioa_iae.csv  std_kontratazioa_serobr_groups.csv  std_nuts-2021.csv
samples/: sample_adjt_c.json
samples/adjt_conts/: 2020ko_Alegiakoko_Udala_kontratuen_erregistroa.xlsx  Registro_de_contratos_de_Ayuntamiento_de_Alegia_del_2020.xlsx  ficheroXML_Ayuntamiento de Alegia.xml
scripts/: get_adjt.py  get_adjt_conts.py  get_adjts.py  get_cont.py  get_conts_s1.py  get_dim.py  get_pa.py  get_pas.py  get_rec.py  log.py  main.py  to_es.py  utils.py
scripts/elasticsearch/: docker-readme.md  to_es.py
scripts/extractors/: e_bidders.py  e_cauths.py  e_conts.py  e_dims.py  e_recs.py  e_tenders.py  e_utils.py
scripts/getters/: get_adjt_conts.py  get_adjts.py  get_bidders.py  get_cauths.py  get_conts_s2.py  get_dims.py  get_pas.py  get_recs.py
scripts/loaders/: l_elasticsearch.py
scripts/parsers/: parse_cauth.py
scripts/transformers/: t_bidder.py  t_bidders.py  t_cauth.py  t_cauths.py  t_cont.py  t_conts.py  t_tenders.py  t_utils.py
scripts/utils/: log.py  utils.py
src/: main.py
src/extractors/: e_bidders.py  e_cauths.py  e_conts.py  e_dims.py  e_recs.py  e_tenders.py
src/transformers/: t_bidders.py  t_cauths.py  t_conts.py
src/utils/: log.py
(+21 files in other folders)
