[tool.poetry]
name = "transparencIA_CAPV"
version = "0.1.0"
description = "Análisis de datos Open Data de la administración del País Vasco"
authors = ["JP Salado"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
pyspark = "^3.2.1"
elasticsearch = "^8.0.0"
bs4 = "^0.0.1"
pylint = "^2.12.2"
bandit = "^1.7.2"
flake8 = "^4.0.1"
jupyter = "^1.0.0"
aiohttp = "^3.8.1"
aiofile = "^3.7.4"
lxml = "^4.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
